# investment-research-v3

./: .gitignore  PLAN.md  升级后：可落地出投资结论的A股进阶投研全系统.md  可直接落地开发的A股投研多Agent系统全量文档.md
a-stock-research/: .env.example  .gitignore  pyproject.toml
a-stock-research/config/: agents.yaml  data_sources.yaml  settings.yaml
a-stock-research/docs/: data-sources-backlog.md
a-stock-research/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
a-stock-research/frontend/src/: App.tsx  main.tsx
a-stock-research/frontend/src/components/: CollectionProgressPanel.tsx  EvidencePack.tsx
a-stock-research/frontend/src/lib/: api.ts  store.ts  useCollectionProgress.ts
a-stock-research/frontend/src/pages/: Dashboard.tsx  History.tsx  IntelArchives.tsx  IntelCollect.tsx  IntelSources.tsx  ReportDetail.tsx  Research.tsx  Search.tsx  WatchList.tsx
a-stock-research/frontend/src/styles/: globals.css
a-stock-research/scripts/: demo.py  demo_phase2.py  demo_phase3.py  refresh_historical_reports.py
a-stock-research/src/investresearch/: __init__.py  cli.py
a-stock-research/src/investresearch/analysis_layer/: __init__.py  business_model.py  financial.py  governance.py  industry.py  risk.py  (+2 more)
a-stock-research/tests/: test_analysis_hybrid_agents.py  test_cross_verification_runtime.py  test_cross_verify.py  test_cross_verify_realtime_close.py  test_data_cleaner_cashflow.py  test_decision_runtime_metadata.py  test_industry_peers.py  test_official_sources.py  test_refresh_historical_reports.py  test_regression_harness.py  test_research_upgrade.py
(+78 files in other folders)
