[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investresearch"
version = "0.1.0"
description = "A股投研多Agent系统 - 自动化深度研究决策平台"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # LLM
    "openai>=1.50.0",
    "httpx>=0.27.0",

    # 数据处理
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",

    # 数据源
    "akshare>=1.15.0",
    "baostock>=0.8.9",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pypinyin>=0.55.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.11.0",

    # 终端美化
    "rich>=13.0.0",

    # 知识库
    "chromadb>=0.5.0",

    # Web API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
investresearch = "investresearch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
